# circle

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  circle-spec-agent.md  schema.sql
.github/workflows/: deploy.yml
client/: Cargo.toml  Trunk.toml  index.html  manifest.json  style.css  sw.js  video.js
client/src/: api.rs  components.rs  main.rs  state.rs
migrations/: 0002_user_media_bytes.sql  0003_admin_settings.sql  0004_multi_media_softdelete.sql
shared/: Cargo.toml
shared/src/: lib.rs
worker/: Cargo.toml  patch-shim.mjs  wrangler.toml
worker/src/: auth.rs  db.rs  handlers.rs  lib.rs  push.rs  util.rs
worker/src/handlers/: admin.rs  auth.rs  invite.rs  media.rs  posts.rs  push.rs  reactions.rs
